[gd_scene load_steps=10 format=2]

[ext_resource path="res://Source/Player/Head.gd" type="Script" id=1]
[ext_resource path="res://Source/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Source/Player/Brain.gd" type="Script" id=3]
[ext_resource path="res://Source/Player/Legs.gd" type="Script" id=4]
[ext_resource path="res://Models/SpaceGun/space_gun.gltf" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=6]
radius = 0.5

[sub_resource type="CapsuleMesh" id=7]
radius = 0.5

[sub_resource type="PrismMesh" id=9]
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.121569, 0.92549, 0.988235, 1 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="Brain" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Legs" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.624655, 0 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="Head"]
current = true
size = 10.0

[node name="space_gun" parent="Head/Camera" instance=ExtResource( 5 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.264, -0.251, -0.433 )

[node name="BodyCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="DirectionPointer" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, -0.528571, -0.591568 )
visible = false
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[connection signal="input_direction_changed" from="Brain" to="Legs" method="set_direction"]
[connection signal="jump_changed" from="Brain" to="Legs" method="jump"]
[connection signal="mouse_moved_x" from="Brain" to="." method="_mouse_moved_x"]
[connection signal="mouse_moved_y" from="Brain" to="Head" method="_mouse_moved_y"]
